--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+
+       <div class="carousel">
+            <div class="carousel-item carousel-item-visible">
+                <img src="images/1.jpg" alt="1st image">
+            </div>
+            <div class="carousel-item">
+                <img src="images/2.jpg" alt="2nd image">
+            </div>
+            <div class="carousel-item">
+                <img src="images/3.jpg" alt="3rd image">
+            </div>
+            <div class="carousel-actions">
+                <button aria-label="previous slide" id="carousel-button-prev"><</button>
+                <button aria-label="next slide" id="carousel-button-next">></button>
+            </div> 
+       </div>
     <!--
         Creating the base HTML structure for the carousel
     
