add function moveToNextSlide

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <button aria-label="next slide" id="carousel-button-next">></button>
             </div> 
        </div>
-        <script src="index.pack.js"></script>
+        <!-- <script src="index.pack.js"></script> -->
+        <script src="index.js"></script>
     </body>
 </html>
